Navigation mobile view bug fixed

--- a/js/jquery.file-manager/jquery.file-manager.css
+++ b/js/jquery.file-manager/jquery.file-manager.css
@@ -3,7 +3,7 @@
     overflow-y: auto;
     position: relative;
     padding: 10px 0;
-    margin-top: 40px;
+    margin-top: 10px;
 }
 
 .file-manager-window folder,
